RESOLVED FIXED65486
[Chromium] WebSQLDatabase version handling is broken in multi-process browsers.
https://bugs.webkit.org/show_bug.cgi?id=65486
Summary [Chromium] WebSQLDatabase version handling is broken in multi-process browsers.
Michael Nordman
Reported 2011-08-01 14:27:53 PDT
[Chromium] WebSQLDatabase version handling is broken in multi-process browsers. The WebCore::AbstractDatabase class maintains a global in-memory map of the version numbers associated with open database files. That map is not reliable in a multi-process system.
Attachments
version handling (23.25 KB, patch)
2011-08-01 15:10 PDT, Michael Nordman
no flags
version handling - style fix (23.23 KB, patch)
2011-08-01 15:18 PDT, Michael Nordman
webkit-ews: commit-queue-
version handling - fix unused local var error (23.24 KB, patch)
2011-08-01 15:45 PDT, Michael Nordman
fishd: review+
Michael Nordman
Comment 1 2011-08-01 15:10:57 PDT
Created attachment 102567 [details] version handling
WebKit Review Bot
Comment 2 2011-08-01 15:13:10 PDT
Attachment 102567 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebCore/storage/AbstractDatabase.h:101: The parameter name "version" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebCore/storage/AbstractDatabase.h:104: The parameter name "version" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebCore/storage/AbstractDatabase.cpp:354: One space before end of line comments [whitespace/comments] [5] Total errors found: 3 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Michael Nordman
Comment 3 2011-08-01 15:18:34 PDT
Created attachment 102569 [details] version handling - style fix
Early Warning System Bot
Comment 4 2011-08-01 15:25:03 PDT
Comment on attachment 102569 [details] version handling - style fix Attachment 102569 [details] did not pass qt-ews (qt): Output: http://queues.webkit.org/results/9290524
Michael Nordman
Comment 5 2011-08-01 15:45:07 PDT
Created attachment 102577 [details] version handling - fix unused local var error
Michael Nordman
Comment 6 2011-08-01 17:22:22 PDT
Note You need to log in before you can comment on or make changes to this bug.